--- a/style.css
+++ b/style.css
@@ -49,3 +49,12 @@ body {
   font-family: "Roboto", sans-serif;
   margin-top: 8px;
 }
+.hint a {
+  color: inherit;
+}
+.hint > span {
+  display: none;
+}
+.hint > span.show {
+  display: initial;
+}
