--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
   transform: translateX(-50%) translateY(-50%);
   display: flex;
   flex-direction: column;
+  text-align: center;
 }
 
 .logo {
