Fixed webroot-absolute image resource paths and reflect service name change (#2)
* Fixed webroot-absolute image resource paths

* Reflect the service's name change from "Beam" to "Mixer".
- also hide the "Copy this" text when there's nothing to copy and instead show a little help text
-

* Centers the logo above the long access token box

* Replace the video and the white logo with a blue background and the colored logo

* Changes for a PR review
- spaced out CSS blocks correctly
- fixed indent in the JS code

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-  background: rgb(10, 6, 23);
+  background: rgb(3, 33, 79) url(images/home.jpg) no-repeat center / cover;
   overflow: hidden;
 }
 
@@ -21,6 +21,7 @@ body {
   transform: translateX(-50%) translateY(-50%);
   display: flex;
   flex-direction: column;
+  text-align: center;
 }
 
 .logo {
@@ -48,4 +49,16 @@ body {
   font-weight: 200;
   font-family: "Roboto", sans-serif;
   margin-top: 8px;
+}
+
+.hint a {
+  color: inherit;
+}
+
+.hint > span {
+  display: none;
+}
+
+.hint > span.show {
+  display: initial;
 }
